--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "^15.1.6",
+    "next": "^16.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.24",
     "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1"
   }
